# cartesian_trajectory_planning

./: .gitignore  CMakeLists.txt  README.md  cartesian_trajectory_planning.xml
bringup/config/: r6bot_controller.yaml
bringup/launch/: r6bot_controller.launch.py  send_circular_trajectory.launch.py  send_linear_trajectory.launch.py  send_trajectory.launch.py
config/: poses.yaml
controller/: r6bot_controller.cpp
controller/include/cartesian_trajectory_planning/: r6bot_controller.hpp
description/launch/: view_r6bot.launch.py
description/ros2_control/: r6bot.ros2_control.xacro
description/urdf/: r6bot.urdf.xacro
experiment_data/: plot_data.py
hardware/: r6bot_hardware.cpp
hardware/include/cartesian_trajectory_planning/: r6bot_hardware.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cartesian_trajectory_planning/include/cartesian_trajectory_planning/cartesian_trajectory_planning/: r6bot_hardware.hpp
install/cartesian_trajectory_planning/lib/cartesian_trajectory_planning/: send_circular_trajectory  send_linear_trajectory  send_trajectory
install/cartesian_trajectory_planning/share/ament_index/resource_index/controller_interface__pluginlib__plugin/: cartesian_trajectory_planning
install/cartesian_trajectory_planning/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: cartesian_trajectory_planning
install/cartesian_trajectory_planning/share/ament_index/resource_index/package_run_dependencies/: cartesian_trajectory_planning
install/cartesian_trajectory_planning/share/ament_index/resource_index/parent_prefix_path/: cartesian_trajectory_planning
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/: cartesian_trajectory_planning.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  cartesian_trajectory_planningConfig-version.cmake  cartesian_trajectory_planningConfig.cmake  export_cartesian_trajectory_planningExport.cmake
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/config/: poses.yaml  r6bot_controller.yaml
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/experiment_data/: data_20260608_195618.csv  data_20260611_123316.csv  data_20260611_124414.csv  data_20260611_125012.csv  data_20260611_125224.csv  data_20260611_125426.csv  data_20260611_130813.csv  data_20260611_131402.csv  data_20260611_132019.csv  data_20260611_132647.csv
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/launch/: r6bot_controller.launch.py  send_circular_trajectory.launch.py  send_linear_trajectory.launch.py  send_trajectory.launch.py  view_r6bot.launch.py
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/r6bot/meshes/collision/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  (+3 more)
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/r6bot/rviz/: view_robot.rviz
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/r6bot/srdf/: r6bot.srdf
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/r6bot/urdf/: r6bot_description.urdf.xacro
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/ros2_control/: r6bot.ros2_control.xacro
install/cartesian_trajectory_planning/share/cartesian_trajectory_planning/urdf/: r6bot.urdf.xacro
log/: latest_build
reference_generator/: send_circular_trajectory.cpp  send_linear_trajectory.cpp  send_trajectory.cpp
ros2_control_demo_description/r6bot/urdf/: r6bot_description.urdf.xacro
test/: test_r6bot_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
(+8 files in other folders)
